--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
         let remainingTime = 0;
         let interval;
         let eggImages = [
-            'images/egg1.png',
-            'images/egg2.png',
-            'images/egg3.png',
-            'images/egg4.png',
-            'images/egg5.png',
-            'images/egg6.png'
+            'egg1.png',
+            'egg2.png',
+            'egg3.png',
+            'egg4.png',
+            'egg5.png',
+            'egg6.png'
         ];
         let currentEggStage = 0;
 
